# ndn-course

./: CLAUDE.md  Cargo.toml  README.md  course  pins.toml  rust-toolchain.toml  setup.sh
.cargo/: config.toml
.claude/: tutor-memory.md
.claude/rubrics/: _template.md  capstone-a-application.md  capstone-b-contribution.md  m00-zero-to-running.md  m01-reading-the-codebase.md  m02-varint.md  m03-mini-tlv.md  m04-name-view.md  m05-bug-hunt.md  m06-name-api.md  m07-data-view.md  m08-strategy.md  m09-workers.md  m10-sharded-pit.md  m11-async.md  m12-face.md  m13-macros.md  m14-verdict.md  m15-verifier.md
.github/workflows/: content-rot.yml  deploy-site.yml  time-to-first-green.yml
capstones/: PROPOSAL-TEMPLATE.md  README.md  capstone-a-application.md  capstone-b-contribution.md
course-site/: README.md  astro.config.mjs  package-lock.json  package.json
course-site/public/: course-landing.html
docs/: syllabus.md
exercises/: README.md
exercises/m00-zero-to-running/: Cargo.toml  HINTS.md  SPEC.md
exercises/m01-reading-the-codebase/: Cargo.toml  HINTS.md  SPEC.md
exercises/m01-reading-the-codebase/src/: lib.rs
exercises/m01-reading-the-codebase/tests/: witness.rs
exercises/m02-varint/: Cargo.toml  HINTS.md  SPEC.md
exercises/m03-mini-tlv/: Cargo.toml  HINTS.md  SPEC.md
exercises/m04-name-view/: Cargo.toml  HINTS.md  SPEC.md
exercises/m05-bug-hunt/: Cargo.toml  HINTS.md  SPEC.md
exercises/m06-name-api/: Cargo.toml  HINTS.md  SPEC.md
exercises/m06-name-api/src/: lib.rs
exercises/m06-name-api/tests/: witness.rs
exercises/m07-data-view/: Cargo.toml  HINTS.md  SPEC.md
exercises/m07-data-view/src/: lib.rs
exercises/m07-data-view/tests/: witness.rs
exercises/m08-strategy/: Cargo.toml  HINTS.md  SPEC.md
exercises/m09-workers/: Cargo.toml  HINTS.md  SPEC.md
exercises/m10-sharded-pit/: Cargo.toml  HINTS.md  SPEC.md
exercises/m11-async/: Cargo.toml  HINTS.md  SPEC.md
exercises/m11-async/src/: lib.rs
exercises/m11-async/tests/: witness.rs
exercises/m12-face/: Cargo.toml  HINTS.md  SPEC.md
exercises/m12-face/src/: lib.rs
exercises/m12-face/tests/: witness.rs
exercises/m13-macros/: Cargo.toml  HINTS.md  SPEC.md
exercises/m14-verdict/: Cargo.toml  HINTS.md  SPEC.md
exercises/m15-verifier/: Cargo.toml  HINTS.md  SPEC.md
exercises/m15-verifier/src/: lib.rs
exercises/m15-verifier/tests/: witness.rs
student/: bug-journal.md  journal.md  progress.json
(+30 files in other folders)
